Исправлена разметка index.html и catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
             <a href="">Оформить заказ</a>
         </div>
         <div>
-            <h1><i>Интернет-магазин строительных материалов и инструментов для ремонта</i></h1>
+            <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
             <div>
                 <p>+7 (812) 555-05-55</p>
                 <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
@@ -43,91 +43,132 @@
     </header>
     <main>
         <section>
-            <h2>ПЕРФОРАТОРЫ</h2>
+            <h2>Перфораторы</h2>
             <section>
-                <h3>ПАРАМЕТРЫ</h3> <!-- скрытый заголовок-->
-                <section>
-                    <h4>ЦЕНА</h4>
-                </section>
-                <section>
-                    <h4>ПРОИЗВОДИТЕЛЬ</h4>
+                <h3>Параметры</h3> <!-- скрытый заголовок-->
+                <div>
+                    <h4>Цена</h4>
+                </div>
+                <div>
+                    <h4>Производитель</h4>
                     <ul>
-                        <li>BOSCH</li>
-                        <li>ИНТЕРСКОЛ</li>
-                        <li>MAKITA</li>
-                        <li>DEWALT</li>
-                        <li>HITACHI</li>
+                        <li>Bosch</li>
+                        <li>Интерскол</li>
+                        <li>Makita</li>
+                        <li>Dewalt</li>
+                        <li>Hitachi</li>
                     </ul>
-                </section>
-                <section>
-                    <h4>ПИТАНИЕ</h4>
+                </div>
+                <div>
+                    <h4>Питание</h4>
                     <ul>
-                        <li>АККУМУЛЯТОРНЫЕ</li>
-                        <li>СЕТЕВЫЕ</li>
+                        <li>Аккумуляторные</li>
+                        <li>Сетевые</li>
                     </ul>
-                </section>
-                <button>ПОКАЗАТЬ</button>
+                </div>
+                <button>Показать</button>
             </section>
             <section>
-                <h3>КАТАЛОГ</h3> <!-- скрытый заголовок-->
-                <article>
-                    <img src="https://via.placeholder.com/150x100" alt="">
-                    <h4>Перфоратор BOSCH BFG 6000</h4>
-                    <p>30500 Р.</p>
-                    <button>25500 Р.</button>
-                </article>
-                <article>
-                    <img src="https://via.placeholder.com/150x100" alt="">
-                    <h4>Перфоратор BOSCH BFG 6000</h4>
-                    <p>30500 Р.</p>
-                    <button>25500 Р.</button>
-                </article>
-                <article>
-                    <img src="https://via.placeholder.com/150x100" alt="">
-                    <h4>Перфоратор BOSCH BFG 6000</h4>
-                    <p>30500 Р.</p>
-                    <button>25500 Р.</button>
-                </article>
-                <article>
-                    <img src="https://via.placeholder.com/150x100" alt="">
-                    <h4>Перфоратор BOSCH BFG 3000</h4>
-                    <p>22500 Р.</p>
-                    <button>15500 Р.</button>
-                </article>
-                <article>
-                    <img src="https://via.placeholder.com/150x100" alt="">
-                    <h4>Перфоратор BOSCH BFG 6000</h4>
-                    <p>30500 Р.</p>
-                    <button>25500 Р.</button>
-                </article>
-                <article><img src="https://via.placeholder.com/150x100" alt="">
-                    <h4>Перфоратор BOSCH BFG 6000</h4>
-                    <p></p>
-                    <button>12500 Р.</button>
-                </article>
-                <article>
-                    <img src="https://via.placeholder.com/150x100" alt="">
-                    <h4>Перфоратор BOSCH BFG 3000</h4>
-                    <p>22500 Р.</p>
-                    <button>15500 Р.</button>
-                </article>
-                <article>
-                    <img src="https://via.placeholder.com/150x100" alt="">
-                    <h4>Перфоратор BOSCH BFG 6000</h4>
-                    <p>30500 Р.</p>
-                    <button>25500 Р.</button>
-                </article>
-                <article><img src="https://via.placeholder.com/150x100" alt="">
-                    <h4>Перфоратор BOSCH BFG 6000</h4>
-                    <p></p>
-                    <button>12500 Р.</button>
-                </article>
+                <h3>Каталог</h3> <!-- скрытый заголовок-->
+                <ul>
+                    <li>
+                        <img src="https://via.placeholder.com/150x100" alt="">
+                        <h4>Перфоратор BOSCH BFG 6000</h4>
+                        <p>30500 Р.</p>
+                        <button>25500 Р.</button>
+                        <div>
+                            <button>Купить</button>
+                            <button>В закладки</button>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://via.placeholder.com/150x100" alt="">
+                        <h4>Перфоратор BOSCH BFG 6000</h4>
+                        <p>30500 Р.</p>
+                        <button>25500 Р.</button>
+                        <div>
+                            <button>Купить</button>
+                            <button>В закладки</button>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://via.placeholder.com/150x100" alt="">
+                        <h4>Перфоратор BOSCH BFG 6000</h4>
+                        <p>30500 Р.</p>
+                        <button>25500 Р.</button>
+                        <div>
+                            <button>Купить</button>
+                            <button>В закладки</button>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://via.placeholder.com/150x100" alt="">
+                        <h4>Перфоратор BOSCH BFG 3000</h4>
+                        <p>22500 Р.</p>
+                        <button>15500 Р.</button>
+                        <div>
+                            <button>Купить</button>
+                            <button>В закладки</button>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://via.placeholder.com/150x100" alt="">
+                        <h4>Перфоратор BOSCH BFG 6000</h4>
+                        <p>30500 Р.</p>
+                        <button>25500 Р.</button>
+                        <div>
+                            <button>Купить</button>
+                            <button>В закладки</button>
+                        </div>
+                    </li>
+                    <li><img src="https://via.placeholder.com/150x100" alt="">
+                        <h4>Перфоратор BOSCH BFG 6000</h4>
+                        <p></p>
+                        <button>12500 Р.</button>
+                        <div>
+                            <button>Купить</button>
+                            <button>В закладки</button>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://via.placeholder.com/150x100" alt="">
+                        <h4>Перфоратор BOSCH BFG 3000</h4>
+                        <p>22500 Р.</p>
+                        <button>15500 Р.</button>
+                        <div>
+                            <button>Купить</button>
+                            <button>В закладки</button>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://via.placeholder.com/150x100" alt="">
+                        <h4>Перфоратор BOSCH BFG 6000</h4>
+                        <p>30500 Р.</p>
+                        <button>25500 Р.</button>
+                        <div>
+                            <button>Купить</button>
+                            <button>В закладки</button>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="https://via.placeholder.com/150x100" alt="">
+                        <h4>Перфоратор BOSCH BFG 6000</h4>
+                        <p></p>
+                        <button>12500 Р.</button>
+                        <div>
+                            <button>Купить</button>
+                            <button>В закладки</button>
+                        </div>
+                    </li>
+                </ul>
             </section>
             <section>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>СЛЕДУЮЩАЯ</button>
+                <ul>
+                    <li><a href="">1</a></li>
+                    <li><a href="">2</a></li>
+                    <li><a href="">3</a></li>
+                    <li><a href="">Следующая</a></li>
+                </ul>
             </section>
         </section>
         <section>
