--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="">Оформить заказ</a> <!-- тут аналогично-->
     </div>
     <div>
-      <h1><i>Интернет-магазин строительных материалов и инструментов для ремонта</i></h1>
+      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <div>
         <p>+7 (812) 555-05-55</p>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
