Выполнил оставшуюся часть разметки index.html и catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -2,225 +2,247 @@
 <html lang="ru">
 
 <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+  <meta charset="utf-8">
+  <title>HTML Academy: Техномарт</title>
 </head>
 
 <body>
-    <header>
+  <header>
+    <div>
+      <a href="index.html">ТЕХНОМАРТ</a>
+      <div>Поиск</div>
+      <a href="">Закладки</a>
+      <a href="">Корзина</a>
+      <a href="">Оформить заказ</a>
+    </div>
+    <div>
+      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+      <div>
+        <p>+7 (812) 555-05-55</p>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
+      </div>
+      <div>
         <div>
-            <a href="index.html">ТЕХНОМАРТ</a>
-            <div>Поиск</div>
-            <a href="">Закладки</a>
-            <a href="">Корзина</a>
-            <a href="">Оформить заказ</a>
+          <p>Равшан Джамшутович</p>
+        </div>
+        <a href="">Мои заказы</a>
+        <a href="">Личный кабинет</a>
+      </div>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="">Компания</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="">Новости</a></li>
+        <li><a href="">Спецпредложения</a></li>
+        <li><a href="">Доставка</a></li>
+        <li><a href="">Контакты</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <div>Дом-Каталог-Инструмент-Перфараторы</div>
+      <!-- Хлебные крошки не знаю как делать)) наверное с помощью JS и элементов списка-->
+      <h2>Перфораторы</h2>
+      <section>
+        <h3>Фильтр и сортировка</h3> <!-- Скрытый заголовок-->
+        <div>
+          <p>Фильтр:</p>
         </div>
         <div>
-            <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-            <div>
-                <p>+7 (812) 555-05-55</p>
-                <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
-            </div>
-            <div>
-                <div>
-                    <p>Равшан Джамшутович</p>
-                </div>
-                <a href="">Мои заказы</a>
-                <a href="">Личный кабинет</a>
-            </div>
+          <p>Сортировка:</p>
+          <ul>
+            <li>
+              <p>По цене</p>
+            </li>
+            <li>
+              <p>По типу</p>
+            </li>
+            <li>
+              <p>По функционалу</p>
+            </li>
+          </ul>
+          <button type="button">Стрелка вверх</button>
+          <button type="button">Стрелка вниз</button>
         </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="">Компания</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
-                <li><a href="">Новости</a></li>
-                <li><a href="">Спецпредложения</a></li>
-                <li><a href="">Доставка</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h2>Перфораторы</h2>
-            <section>
-                <h3>Параметры</h3> <!-- скрытый заголовок-->
-                <div>
-                    <h4>Цена</h4>
-                </div>
-                <div>
-                    <h4>Производитель</h4>
-                    <ul>
-                        <li>Bosch</li>
-                        <li>Интерскол</li>
-                        <li>Makita</li>
-                        <li>Dewalt</li>
-                        <li>Hitachi</li>
-                    </ul>
-                </div>
-                <div>
-                    <h4>Питание</h4>
-                    <ul>
-                        <li>Аккумуляторные</li>
-                        <li>Сетевые</li>
-                    </ul>
-                </div>
-                <button>Показать</button>
-            </section>
-            <section>
-                <h3>Каталог</h3> <!-- скрытый заголовок-->
-                <ul>
-                    <li>
-                        <img src="https://via.placeholder.com/150x100" alt="">
-                        <h4>Перфоратор BOSCH BFG 6000</h4>
-                        <p>30500 Р.</p>
-                        <button>25500 Р.</button>
-                        <div>
-                            <button>Купить</button>
-                            <button>В закладки</button>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="https://via.placeholder.com/150x100" alt="">
-                        <h4>Перфоратор BOSCH BFG 6000</h4>
-                        <p>30500 Р.</p>
-                        <button>25500 Р.</button>
-                        <div>
-                            <button>Купить</button>
-                            <button>В закладки</button>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="https://via.placeholder.com/150x100" alt="">
-                        <h4>Перфоратор BOSCH BFG 6000</h4>
-                        <p>30500 Р.</p>
-                        <button>25500 Р.</button>
-                        <div>
-                            <button>Купить</button>
-                            <button>В закладки</button>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="https://via.placeholder.com/150x100" alt="">
-                        <h4>Перфоратор BOSCH BFG 3000</h4>
-                        <p>22500 Р.</p>
-                        <button>15500 Р.</button>
-                        <div>
-                            <button>Купить</button>
-                            <button>В закладки</button>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="https://via.placeholder.com/150x100" alt="">
-                        <h4>Перфоратор BOSCH BFG 6000</h4>
-                        <p>30500 Р.</p>
-                        <button>25500 Р.</button>
-                        <div>
-                            <button>Купить</button>
-                            <button>В закладки</button>
-                        </div>
-                    </li>
-                    <li><img src="https://via.placeholder.com/150x100" alt="">
-                        <h4>Перфоратор BOSCH BFG 6000</h4>
-                        <p></p>
-                        <button>12500 Р.</button>
-                        <div>
-                            <button>Купить</button>
-                            <button>В закладки</button>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="https://via.placeholder.com/150x100" alt="">
-                        <h4>Перфоратор BOSCH BFG 3000</h4>
-                        <p>22500 Р.</p>
-                        <button>15500 Р.</button>
-                        <div>
-                            <button>Купить</button>
-                            <button>В закладки</button>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="https://via.placeholder.com/150x100" alt="">
-                        <h4>Перфоратор BOSCH BFG 6000</h4>
-                        <p>30500 Р.</p>
-                        <button>25500 Р.</button>
-                        <div>
-                            <button>Купить</button>
-                            <button>В закладки</button>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="https://via.placeholder.com/150x100" alt="">
-                        <h4>Перфоратор BOSCH BFG 6000</h4>
-                        <p></p>
-                        <button>12500 Р.</button>
-                        <div>
-                            <button>Купить</button>
-                            <button>В закладки</button>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-            <section>
-                <ul>
-                    <li><a href="">1</a></li>
-                    <li><a href="">2</a></li>
-                    <li><a href="">3</a></li>
-                    <li><a href="">Следующая</a></li>
-                </ul>
-            </section>
-        </section>
-        <section>
-            <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
-            <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в
-                кирпиче, бетоне и камне.<br>
-                Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции
-                дрели, шуруповерта и отбойного молотка.<br>
-                В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и
-                ударная дрель.
-            </p>
-        </section>
-    </main>
-    <footer>
+      </section>
+      <section>
+        <h3>Параметры</h3> <!-- скрытый заголовок-->
         <div>
-            <div>
-                <a href="">ТЕХНОМАРТ</a>
-            </div>
-            <div>
-                <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
-            </div>
-            <div>
-                <ul>
-                    <li><a href="">Компания</a></li>
-                    <li><a href="">Новости</a></li>
-                    <li><a href="catalog.html">Каталог</a></li>
-                    <li><a href="">Доставка</a></li>
-                    <li><a href="">Контакты</a></li>
-                    <li><a href="">Материалы</a></li>
-                    <li><a href="">Техника</a></li>
-                    <li><a href="">Инструмент</a></li>
-                    <li><a href="">Спецпредложения</a></li>
-                </ul>
-            </div>
+          <h4>Цена</h4>
         </div>
         <div>
-            <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
-            <ul>
-                <li><a href="">Вконтакте</a></li>
-                <li><a href="">Фейсбук</a></li>
-                <li><a href="">Инстаграм</a></li>
-            </ul>
-            <div>
-                <p>Обратная связь:</p>
-                <a href="">mail@htmlacademy.ru</a>
-            </div>
-            <div>
-                <p>Разработано -</p>
-                <a href="https://htmlacademy.ru">htmlacademy.ru</a>
-            </div>
+          <h4>Производитель</h4>
+          <ul>
+            <li>Bosch</li>
+            <li>Интерскол</li>
+            <li>Makita</li>
+            <li>Dewalt</li>
+            <li>Hitachi</li>
+          </ul>
         </div>
-    </footer>
+        <div>
+          <h4>Питание</h4>
+          <ul>
+            <li>Аккумуляторные</li>
+            <li>Сетевые</li>
+          </ul>
+        </div>
+        <button type="button">Показать</button>
+      </section>
+      <section>
+        <h3>Каталог</h3> <!-- скрытый заголовок-->
+        <ul>
+          <li>
+            <img src="https://via.placeholder.com/150x100" alt="">
+            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
+            <div>
+              <button type="button">Купить</button>
+              <button type="button">В закладки</button>
+            </div>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/150x100" alt="">
+            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
+            <div>
+              <button type="button">Купить</button>
+              <button type="button">В закладки</button>
+            </div>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/150x100" alt="">
+            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
+            <div>
+              <button type="button">Купить</button>
+              <button type="button">В закладки</button>
+            </div>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/150x100" alt="">
+            <h4>Перфоратор BOSCH BFG 3000</h4>
+            <p>22500 Р.</p>
+            <p>15500 Р.</p>
+            <div>
+              <button type="button">Купить</button>
+              <button type="button">В закладки</button>
+            </div>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/150x100" alt="">
+            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
+            <div>
+              <button type="button">Купить</button>
+              <button type="button">В закладки</button>
+            </div>
+          </li>
+          <li><img src="https://via.placeholder.com/150x100" alt="">
+            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <p></p>
+            <p>12500 Р.</p>
+            <div>
+              <button type="button">Купить</button>
+              <button type="button">В закладки</button>
+            </div>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/150x100" alt="">
+            <h4>Перфоратор BOSCH BFG 3000</h4>
+            <p>22500 Р.</p>
+            <p>15500 Р.</p>
+            <div>
+              <button type="button">Купить</button>
+              <button type="button">В закладки</button>
+            </div>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/150x100" alt="">
+            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
+            <div>
+              <button type="button">Купить</button>
+              <button type="button">В закладки</button>
+            </div>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/150x100" alt="">
+            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <p></p>
+            <p>12500 Р.</p>
+            <div>
+              <button type="button">Купить</button>
+              <button type="button">В закладки</button>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <ul>
+        <li><a href="">1</a></li>
+        <li><a href="">2</a></li>
+        <li><a href="">3</a></li>
+        <li><a href="">Следующая</a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
+      <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в
+        кирпиче, бетоне и камне.<br>
+        Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции
+        дрели, шуруповерта и отбойного молотка.<br>
+        В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и
+        ударная дрель.
+      </p>
+    </section>
+  </main>
+  <footer>
+    <div>
+      <div>
+        <a href="">ТЕХНОМАРТ</a>
+      </div>
+      <div>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
+      </div>
+      <div>
+        <ul>
+          <li><a href="">Компания</a></li>
+          <li><a href="">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Контакты</a></li>
+          <li><a href="">Материалы</a></li>
+          <li><a href="">Техника</a></li>
+          <li><a href="">Инструмент</a></li>
+          <li><a href="">Спецпредложения</a></li>
+        </ul>
+      </div>
+    </div>
+    <div>
+      <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+      <ul>
+        <li><a href="">Вконтакте</a></li>
+        <li><a href="">Фейсбук</a></li>
+        <li><a href="">Инстаграм</a></li>
+      </ul>
+      <div>
+        <p>Обратная связь:</p>
+        <a href="">mail@htmlacademy.ru</a>
+      </div>
+      <div>
+        <p>Разработано -</p>
+        <a href="https://htmlacademy.ru">htmlacademy.ru</a>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
