Внёс правки в оставшуюся часть разметки index.html и catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -43,8 +43,14 @@
   </header>
   <main>
     <section>
-      <div>Дом-Каталог-Инструмент-Перфараторы</div>
-      <!-- Хлебные крошки не знаю как делать)) наверное с помощью JS и элементов списка-->
+      <section>
+        <ul>
+          <li><a href="index.html">На главную</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="">Инструмент</a></li>
+          <li><a href="">Перфораторы</a></li>
+        </ul>
+      </section>>
       <h2>Перфораторы</h2>
       <section>
         <h3>Фильтр и сортировка</h3> <!-- Скрытый заголовок-->
@@ -55,17 +61,17 @@
           <p>Сортировка:</p>
           <ul>
             <li>
-              <p>По цене</p>
+              <a href="">По цене</a>
             </li>
             <li>
-              <p>По типу</p>
+              <a href="">По типу</a>
             </li>
             <li>
-              <p>По функционалу</p>
+              <a href="">По функционалу</a>
             </li>
+            <li><a href="">Стрелка вверх</a></li>>
+            <li><a href="">Стрелка вниз</a></li>>
           </ul>
-          <button type="button">Стрелка вверх</button>
-          <button type="button">Стрелка вниз</button>
         </div>
       </section>
       <section>
@@ -76,18 +82,32 @@
         <div>
           <h4>Производитель</h4>
           <ul>
-            <li>Bosch</li>
-            <li>Интерскол</li>
-            <li>Makita</li>
-            <li>Dewalt</li>
-            <li>Hitachi</li>
+            <li><input type="checkbox">
+              <p>Bosch</p>
+            </li>
+            <li><input type="checkbox">
+              <p>Интерскол</p>
+            </li>
+            <li><input type="checkbox">
+              <p>Makita</p>
+            </li>
+            <li><input type="checkbox">
+              <p>Dewalt</p>
+            </li>
+            <li><input type="checkbox">
+              <p>Hitachi</p>
+            </li>
           </ul>
         </div>
         <div>
           <h4>Питание</h4>
           <ul>
-            <li>Аккумуляторные</li>
-            <li>Сетевые</li>
+            <li><input type="radio">
+              <p>Аккумуляторные</p>
+            </li>
+            <li><input type="radio">
+              <p>Сетевые</p>
+            </li>
           </ul>
         </div>
         <button type="button">Показать</button>
