--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
         </ul>
       </div>
     </section>
-    <section> type="button"
+    <section>
       <h2>ПРОИЗВОДИТЕЛИ</h2> <!-- Скрытый заголовок-->
       <div>
-        <p>Популярные производители:</p>
+        <h3>Популярные производители:</h3>
         <a href="">Все производители</a>
       </div>
       <div>
@@ -151,7 +151,7 @@
     <section>
       <h2>СЕРВИСЫ</h2> <!-- Скрытый заголовок-->
       <div>
-        <p>Сервисы</p>
+        <h3>Сервисы</h3>
         <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
       </div>
@@ -163,7 +163,7 @@
         </ul>
       </div>
       <div>
-        <p>Доставp
+        <h3>Доставка</h3>
         <p>Мы с удовольствием доставим ваш товар прямо<br>
           к вашему подъезду совершенно бесплатно!<br>
           Ведь мы неплохо заработаем,<br>
