Удалил лишние кавычки в catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -69,8 +69,8 @@
             <li>
               <a href="">По функционалу</a>
             </li>
-            <li><a href="">Стрелка вверх</a></li>>
-            <li><a href="">Стрелка вниз</a></li>>
+            <li><a href="">Стрелка вверх</a></li>
+            <li><a href="">Стрелка вниз</a></li>
           </ul>
         </div>
       </section>
