--- a/catalog.html
+++ b/catalog.html
@@ -116,7 +116,7 @@
         <h3>Каталог</h3> <!-- скрытый заголовок-->
         <ul>
           <li>
-            <img src="https://via.placeholder.com/150x100" alt="">
+            <img src="img/bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
             <h4>Перфоратор BOSCH BFG 6000</h4>
             <p>30500 Р.</p>
             <p>25500 Р.</p>
@@ -126,7 +126,7 @@
             </div>
           </li>
           <li>
-            <img src="https://via.placeholder.com/150x100" alt="">
+            <img src="img/bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
             <h4>Перфоратор BOSCH BFG 6000</h4>
             <p>30500 Р.</p>
             <p>25500 Р.</p>
@@ -136,7 +136,7 @@
             </div>
           </li>
           <li>
-            <img src="https://via.placeholder.com/150x100" alt="">
+            <img src="img/bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
             <h4>Перфоратор BOSCH BFG 6000</h4>
             <p>30500 Р.</p>
             <p>25500 Р.</p>
@@ -146,7 +146,7 @@
             </div>
           </li>
           <li>
-            <img src="https://via.placeholder.com/150x100" alt="">
+            <img src="img/bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
             <h4>Перфоратор BOSCH BFG 3000</h4>
             <p>22500 Р.</p>
             <p>15500 Р.</p>
@@ -156,7 +156,7 @@
             </div>
           </li>
           <li>
-            <img src="https://via.placeholder.com/150x100" alt="">
+            <img src="img/bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
             <h4>Перфоратор BOSCH BFG 6000</h4>
             <p>30500 Р.</p>
             <p>25500 Р.</p>
@@ -165,8 +165,8 @@
               <button type="button">В закладки</button>
             </div>
           </li>
-          <li><img src="https://via.placeholder.com/150x100" alt="">
-            <h4>Перфоратор BOSCH BFG 6000</h4>
+          <li><img src="img/bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
+            <h4>Перфоратор BOSCH BFG 2000</h4>
             <p></p>
             <p>12500 Р.</p>
             <div>
@@ -175,7 +175,7 @@
             </div>
           </li>
           <li>
-            <img src="https://via.placeholder.com/150x100" alt="">
+            <img src="img/bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
             <h4>Перфоратор BOSCH BFG 3000</h4>
             <p>22500 Р.</p>
             <p>15500 Р.</p>
@@ -185,7 +185,7 @@
             </div>
           </li>
           <li>
-            <img src="https://via.placeholder.com/150x100" alt="">
+            <img src="img/bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
             <h4>Перфоратор BOSCH BFG 6000</h4>
             <p>30500 Р.</p>
             <p>25500 Р.</p>
@@ -195,8 +195,8 @@
             </div>
           </li>
           <li>
-            <img src="https://via.placeholder.com/150x100" alt="">
-            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <img src="img/bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
+            <h4>Перфоратор BOSCH BFG 2000</h4>
             <p></p>
             <p>12500 Р.</p>
             <div>
