Изменил формат с jpg на svg у изображения card-location

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <p>Вы можете забрать товар сами,<br>
           заехав в наш офис:
         </p>
-        <img src="img/card-location.jpg" width="300" height="158" alt="Как к нам проехать">
+        <img src="img/card-location.svg" width="300" height="158" alt="Как к нам проехать">
         <a href="">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ</a>
       </div>
     </section>
