--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <div>
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
+            <img src="img/man-and-hummer-drill.jpg" width="620" height="266" alt="">
           </div>
           <div>
             <a href="catalog.html">Открыть каталог</a>
@@ -87,7 +88,7 @@
       <div>
         <ul>
           <li>
-            <img src="https://via.placeholder.com/150x100" alt="">
+            <img src="img/hummer-drill-bfg9000.jpg" width="184" height="164" alt="Перфоратор Bosch BFG 9000">
             <h4>Перфоратор BOSCH BFG 9000</h4>
             <p>32500 Р.</p>
             <p>25500 Р.</p>
@@ -97,7 +98,7 @@
             </div>
           </li>
           <li>
-            <img src="https://via.placeholder.com/150x100" alt="">
+            <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
             <h4>Перфоратор BOSCH BFG 3000</h4>
             <p>22500 Р.</p>
             <p>15500 Р.</p>
@@ -107,7 +108,7 @@
             </div>
           </li>
           <li>
-            <img src="https://via.placeholder.com/150x100" alt="">
+            <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
             <h4>Перфоратор BOSCH BFG 6000</h4>
             <p>30500 Р.</p>
             <p>25500 Р.</p>
@@ -117,7 +118,7 @@
             </div>
           </li>
           <li>
-            <img src="https://via.placeholder.com/150x100" alt="">
+            <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
             <h4>Перфоратор BOSCH BFG 2000</h4>
             <p></p>
             <p>12500 Р.</p>
@@ -137,14 +138,15 @@
       </div>
       <div>
         <ul>
-          <li><a href=""><img src="https://via.placeholder.com/150x100" alt=""></a></li>
-          <li><a href=""><img src="https://via.placeholder.com/150x100" alt=""></a></li>
-          <li><a href=""><img src="https://via.placeholder.com/150x100" alt=""></a></li>
-          <li><a href=""><img src="https://via.placeholder.com/150x100" alt=""></a></li>
-          <li><a href=""><img src="https://via.placeholder.com/150x100" alt=""></a></li>
-          <li><a href=""><img src="https://via.placeholder.com/150x100" alt=""></a></li>
-          <li><a href=""><img src="https://via.placeholder.com/150x100" alt=""></a></li>
-          <li><a href=""><img src="https://via.placeholder.com/150x100" alt=""></a></li>
+          <li><a href=""><img src="img/brand-logo-bosch.png" width="126" height="37" alt="Компания Bosch"></a></li>
+          <li><a href=""><img src="img/brand-logo-makita.png" width="123" height="40" alt="Компания Makita"></a></li>
+          <li><a href=""><img src="img/brand-logo-dewalt.png" width="146" height="44" alt="Компания DeWalt"></a></li>
+          <li><a href=""><img src="img/brand-logo-interscol.png" width="200" height="86" alt="Компания Интерскол"></a>
+          </li>
+          <li><a href=""><img src="img/brand-logo-hitachi.png" width="169" height="31" alt="Компания Hitachi"></a></li>
+          <li><a href=""><img src="img/brand-logo-lg.png" width="121" height="73" alt="Компания LG"></a></li>
+          <li><a href=""><img src="img/brand-logo-aeg.png" width="151" height="96" alt="Компания AEG"></a></li>
+          <li><a href=""><img src="img/brand-logo-metabo.png" width="204" height="69" alt="Компания Metabo"></a></li>
         </ul>
       </div>
     </section>
